Resolve spacing issue for sections

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -55,8 +55,7 @@ main {
 }
 
 section {
-  @include spacing-mixins.top-6(margin);
-  @include spacing-mixins.bottom-6(margin);
+  @include spacing-mixins.bottom-8(margin);
 }
 
 .headshot {
